--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">\
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Blakdhut Exchange</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="shortcut icon" href="./logo.png" type="image/x-icon">
@@ -15,18 +15,18 @@
 
     <div class="nav">
         <div class="logo">
-            <img src="./logo.png" alt="">
+            <a href="./index.html"><img src="./logo.png" alt=""></a>
         </div>
         <div class="button">
-            <button class="signup"><a href="">Sign Up</a></button>
-            <button class="login"><a href="">Login</a></button>
+            <button class="signup"><a href="./signup.html">Sign Up</a></button>
+            <button class="login"><a href="./login.html">Login</a></button>
         </div>
     </div>
 
     <div class="hero">
         <div class="left">
             <h2>Buy and Sell <br> <span>Cryptocurrency</span> <br> Instantly</h2>
-            <button><a href="">Trade Now</a></button>
+            <button><a href="./login.html">Trade Now</a></button>
         </div>
         <div class="right">
             <div><img src="./icons/bitcoin.png" alt=""></div>
@@ -121,7 +121,7 @@
         <div class="top">
             <div class="leftside">
                 <div class="logo">
-                    <img src="./logo.png" alt="Velox Logo">
+                    <a href="./index.html"><img src="./logo.png" alt=""></a>
                 </div>
                 <div class="socials">
                     <a href="https://www.instagram.com/Blakdhute" target="_blank" rel="noopener noreferrer">
@@ -138,7 +138,7 @@
             <div class="rightside">
                 <a href="#">Privacy Policy</a>
                 <a href="#">Terms and Conditions</a>
-                <small>Copyright © 2025 Velox</small>
+                <small>Copyright © 2025 Blakdhut</small>
             </div>
         </div>
     </footer>
