--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     <div class="trust">
         <div class="title">
-            <h3>Depositing and withdrawing from your trading account just got easier with Blackdhut.</h3>
+            <h3>Depositing and withdrawing from your trading account just got easier with Blakdhut.</h3>
         </div>
         <div class="con">
             <div class="trustbox">
