--- a/signup.html
+++ b/signup.html
@@ -12,34 +12,46 @@
         <a href="./index.html"><img src="./logo.png" alt=""></a>
         <h2>Sign Up</h2>
     </div>
-    <form>
-      <div class="input-group">
-        <label for="fullname">Full Name</label>
-        <input type="text" id="fullname" placeholder="Enter your full name" required />
-      </div>
-      <div class="input-group">
-        <label for="email">Email</label>
-        <input type="email" id="email" placeholder="Enter your email" required />
-      </div>
-      <div class="input-group">
-        <label for="username">Username</label>
-        <input type="text" id="username" placeholder="Choose a username" required />
-      </div>
-      <div class="input-group">
-        <label for="password">Password</label>
-        <input type="password" id="password" placeholder="Create a password" required />
-      </div>
-      <div class="input-group">
-        <label for="confirm-password">Confirm Password</label>
-        <input type="password" id="confirm-password" placeholder="Confirm your password" required />
-      </div>
+    <form action="submit-signup.php" method="POST">
+  <div class="input-group">
+    <label for="fullname">Full Name</label>
+    <input type="text" id="fullname" name="fullname" placeholder="Enter your full name" required />
+  </div>
+  <div class="input-group">
+    <label for="email">Email</label>
+    <input type="email" id="email" name="email" placeholder="Enter your email" required />
+  </div>
+  <div class="input-group">
+    <label for="username">Username</label>
+    <input type="text" id="username" name="username" placeholder="Choose a username" required />
+  </div>
+  <div class="input-group">
+    <label for="password">Password</label>
+    <input type="password" id="password" name="password" placeholder="Create a password" required />
+  </div>
+  <div class="input-group">
+    <label for="confirm-password">Confirm Password</label>
+    <input type="password" id="confirm-password" name="confirm_password" placeholder="Confirm your password" required />
+  </div>
+  <div class="input-group">
+    <label for="Referral">Referral (Optional)</label>
+    <input type="text" id="Referral" name="referral" placeholder="3d3d374j" />
+  </div>
 
-      <button type="submit">Sign Up</button>
+  <div class="options">
+    <label>
+      <input type="checkbox" name="terms" required />
+      I Have Read the Terms and Conditions
+    </label>
+  </div>
 
-      <p class="form-footer">
-        Already have an account? <a href="login.html">Login here</a>
-      </p>
-    </form>
+  <button type="submit">Sign Up</button>
+
+  <p class="form-footer">
+    Already have an account? <a href="login.html">Login here</a>
+  </p>
+</form>
+
   </div>
 </body>
 </html>
