--- a/dashboard.html
+++ b/dashboard.html
@@ -9,89 +9,75 @@
 </head>
 <body>
   <header>
-    <a href="./index.html"><img src="./logo.png" alt="Blakdhut Logo" /></a>
+    <a href="./index.html">
+      <img src="./logo.png" alt="Blakdhut Logo" />
+    </a>
   </header>
 
-  <div class="content">
+  <main class="content">
     <h2>Hello, Emmanuel 👋</h2>
-    <div class="tran">
-      <div class="buy">
+    <div class="actions">
+      <div class="action-item">
         <button><img src="./icons/up.png" alt="Sell" /></button>
-        <a href="#">Sell</a>
+        <span>Sell</span>
       </div>
-      <div class="buy">
+      <div class="action-item">
         <button><img src="./icons/down.png" alt="Buy" /></button>
-        <a href="#">Buy</a>
+        <span>Buy</span>
       </div>
-      <div class="buy">
+      <div class="action-item">
         <button><img src="./icons/bill.png" alt="History" /></button>
-        <a href="#">History</a>
+        <span>History</span>
       </div>
     </div>
+  </main>
+
+  <div class="crypto-prices">
+    <table id="crypto-table">
+      <thead>
+        <tr>
+          <th>Coin</th>
+          <th>Symbol</th>
+          <th>Price (USD)</th>
+        </tr>
+      </thead>
+      <tbody>
+        <!-- Crypto data will be inserted here -->
+      </tbody>
+    </table>
   </div>
-
-<!-- TradingView Crypto Market Overview Widget BEGIN -->
-<div class="tradingview-widget-container">
-  <div class="tradingview-widget-container__widget"></div>
-  <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-market-overview.js" async>
-  {
-    "colorTheme": "dark",
-    "dateRange": "12M",
-    "showChart": false,
-    "locale": "en",
-    "width": "100%",
-    "height": "400",
-    "largeChartUrl": "",
-    "isTransparent": false,
-    "showSymbolLogo": true,
-    "plotLineColorGrowing": "rgba(0, 255, 0, 1)",
-    "plotLineColorFalling": "rgba(255, 0, 0, 1)",
-    "gridLineColor": "rgba(42, 46, 57, 0)",
-    "scaleFontColor": "rgba(120, 123, 134, 1)",
-    "belowLineFillColorGrowing": "rgba(0, 255, 0, 0.12)",
-    "belowLineFillColorFalling": "rgba(255, 0, 0, 0.12)",
-    "symbolActiveColor": "rgba(0, 255, 255, 0.12)",
-    "tabs": [
-      {
-        "title": "Crypto",
-        "symbols": [
-          {
-            "s": "BINANCE:BTCUSDT",
-            "d": "Bitcoin"
-          },
-          {
-            "s": "BINANCE:ETHUSDT",
-            "d": "Ethereum"
-          },
-          {
-            "s": "BINANCE:BNBUSDT",
-            "d": "BNB"
-          },
-          {
-            "s": "BINANCE:XRPUSDT",
-            "d": "XRP"
-          },
-          {
-            "s": "BINANCE:SOLUSDT",
-            "d": "Solana"
-          },
-          {
-            "s": "BINANCE:TONUSDT",
-            "d": "Ton"
-          }
-        ],
-        "originalTitle": "Crypto"
-      }
-    ]
-  }
-  </script>
-</div>
-<!-- TradingView Crypto Market Overview Widget END -->
-
-
 
   <footer>
     <small>&copy; 2025 Blakdhut Exchange. All rights reserved.</small>
   </footer>
+
+  <script>
+    async function fetchCryptoData() {
+      try {
+        const res = await fetch(
+          "https://api.coingecko.com/api/v3/coins/markets?vs_currency=usd&order=market_cap_desc&per_page=10&page=1"
+        );
+        const data = await res.json();
+
+        const tableBody = document.querySelector("#crypto-table tbody");
+        tableBody.innerHTML = "";
+
+        data.forEach((coin) => {
+          const row = document.createElement("tr");
+          row.innerHTML = `
+            <td>${coin.name}</td>
+            <td>${coin.symbol.toUpperCase()}</td>
+            <td>$${coin.current_price.toLocaleString()}</td>
+          `;
+          tableBody.appendChild(row);
+        });
+      } catch (error) {
+        console.error("Failed to fetch crypto prices:", error);
+      }
+    }
+
+    fetchCryptoData(); // Load once on page load
+    setInterval(fetchCryptoData, 10000); // Refresh every 10 seconds
+  </script>
 </body>
 </html>
