--- a/dashboard.html
+++ b/dashboard.html
@@ -36,6 +36,7 @@
     <table id="crypto-table">
       <thead>
         <tr>
+          <th>Logo</th>
           <th>Coin</th>
           <th>Symbol</th>
           <th>Price (USD)</th>
@@ -51,11 +52,10 @@
     <small>&copy; 2025 Blakdhut Exchange. All rights reserved.</small>
   </footer>
 
-  <script>
+    <script>
     async function fetchCryptoData() {
-      try {
         const res = await fetch(
-          "https://api.coingecko.com/api/v3/coins/markets?vs_currency=usd&order=market_cap_desc&per_page=10&page=1"
+        "https://api.coingecko.com/api/v3/coins/markets?vs_currency=usd&order=market_cap_desc&per_page=10&page=1"
         );
         const data = await res.json();
 
@@ -63,21 +63,20 @@
         tableBody.innerHTML = "";
 
         data.forEach((coin) => {
-          const row = document.createElement("tr");
-          row.innerHTML = `
+        const row = document.createElement("tr");
+        row.innerHTML = `
+            <td><img src="${coin.image}" alt="${coin.name} Logo" width="24" height="24" /></td>
             <td>${coin.name}</td>
             <td>${coin.symbol.toUpperCase()}</td>
             <td>$${coin.current_price.toLocaleString()}</td>
-          `;
-          tableBody.appendChild(row);
+        `;
+        tableBody.appendChild(row);
         });
-      } catch (error) {
-        console.error("Failed to fetch crypto prices:", error);
-      }
     }
 
-    fetchCryptoData(); // Load once on page load
-    setInterval(fetchCryptoData, 10000); // Refresh every 10 seconds
-  </script>
+    fetchCryptoData(); // initial call
+    setInterval(fetchCryptoData, 10000); // refresh every 10 seconds
+    </script>
+
 </body>
 </html>
