--- a/dashboard.html
+++ b/dashboard.html
@@ -45,17 +45,13 @@
   </footer>
 
     <script>
+document.addEventListener("DOMContentLoaded", () => {
     let previousPrices = {};
 
     async function fetchCryptoData() {
-        try {
-            const res = await fetch("https://api.coincap.io/v2/assets?limit=10");
-            const json = await res.json();
-            const data = json.data;
-            updateCryptoPrices(data);
-        } catch (error) {
-            console.error("Failed to fetch data:", error);
-        }
+        const res = await fetch("https://api.coingecko.com/api/v3/coins/markets?vs_currency=usd&per_page=10&page=1");
+        const data = await res.json();
+        updateCryptoPrices(data);
     }
 
     function updateCryptoPrices(data) {
@@ -63,37 +59,34 @@
         tbody.innerHTML = "";
 
         data.forEach((coin) => {
-            const id = coin.id;
-            const name = coin.name;
-            const symbol = coin.symbol;
-            const price = parseFloat(coin.priceUsd);
-            const prevPrice = previousPrices[id];
-
+            const prev = previousPrices[coin.id];
+            const current = coin.current_price;
             let priceClass = "";
-            if (prevPrice !== undefined) {
-                if (price > prevPrice) {
-                    priceClass = "price-up"; // green
-                } else if (price < prevPrice) {
-                    priceClass = "price-down"; // red
-                }
+
+            if (prev !== undefined) {
+                if (current > prev) priceClass = "price-up";
+                else if (current < prev) priceClass = "price-down";
+                else priceClass = previousPrices[coin.id + "_class"] || "";
             }
 
-            previousPrices[id] = price;
+            previousPrices[coin.id] = current;
+            previousPrices[coin.id + "_class"] = priceClass;
 
             const row = document.createElement("tr");
             row.innerHTML = `
-                <td>${name}</td>
-                <td>${symbol}</td>
-                <td class="${priceClass}">$${price.toFixed(2)}</td>
+                <td><img src="${coin.image}" alt="${coin.name}" width="20" style="vertical-align: middle;"> ${coin.name}</td>
+                <td>${coin.symbol.toUpperCase()}</td>
+                <td class="${priceClass}">$${current.toLocaleString()}</td>
             `;
-
             tbody.appendChild(row);
         });
     }
 
     fetchCryptoData();
     setInterval(fetchCryptoData, 5000);
+});
 </script>
+
 
 
 </body>
