--- a/dashboard.html
+++ b/dashboard.html
@@ -18,16 +18,23 @@
     <h2>Hello, Emmanuel 👋</h2>
     <div class="actions">
       <div class="action-item">
-        <button><img src="./icons/up.png" alt="Sell" /></button>
+        <a href="./sell.html">
+          <button><img src="./icons/up.png" alt="Sell" /></button>
+        </a>
         <span>Sell</span>
       </div>
       <div class="action-item">
+        <a href="./buy.html">
         <button><img src="./icons/down.png" alt="Buy" /></button>
+        </a>
         <span>Buy</span>
       </div>
       <div class="action-item">
+        <a href="./history.html">
         <button><img src="./icons/bill.png" alt="History" /></button>
+        </a>
         <span>History</span>
+        
       </div>
     </div>
   </main>
