--- a/index.html
+++ b/index.html
@@ -18,15 +18,15 @@
             <a href="./index.html"><img src="./logo.png" alt=""></a>
         </div>
         <div class="button">
-            <button class="signup"><a href="./signup.html">Sign Up</a></button>
-            <button class="login"><a href="./login.html">Login</a></button>
+            <a href="./signup.html"><button class="signup">Sign Up</button></a>
+            <a href="./login.html"><button class="login">Login</button></a>
         </div>
     </div>
 
     <div class="hero">
         <div class="left">
             <h2>Buy and Sell <br> <span>Cryptocurrency</span> <br> Instantly</h2>
-            <button><a href="./login.html">Trade Now</a></button>
+            <a href="./login.html"><button>Trade Now</button></a>
         </div>
         <div class="right">
             <div><img src="./icons/bitcoin.png" alt=""></div>
@@ -109,7 +109,7 @@
             <h2>Don't Miss Out</h2>
             <h3>Get The Latest And Cheapest Rate @ Blackdhut</h3>
             <div class="ratebtn">
-                <a href="#" class="telegram-btn">
+                <a href="https://t.me/blakdhute" class="telegram-btn">
                     <img src="./icons/telegram.png" alt="Telegram Icon">
                     JOIN OUR TELEGRAM
                 </a>
