--- a/profile.html
+++ b/profile.html
@@ -20,7 +20,7 @@
   <div class="overlay" id="menu">
     <button class="close-btn" id="closeMenu">&times;</button>
     <nav class="overlay-menu">
-      <a href="./profile.html">Profile</a>
+      <a href="./dashboard.html">Dashboard</a>
       <a href="./kyc.html">KYC</a>
       <a href="./referral.html">Referral</a>
       <a href="./history.html">History</a>
@@ -37,7 +37,7 @@
     <div class="actions">
       <div class="acto">
         <div class="buton">
-          <a href="">Verify Profile</a>
+          <a href="kyc.html">Verify Profile</a>
         </div>
         <div class="buton">
           <a href="">Edit Profile</a>
@@ -48,7 +48,7 @@
       <div class="boxes">
         <div class="box">
           <span>Total Volume</span>
-          <h2>₦ 0</h2>
+          <h2>₦0</h2>
         </div>
         <div class="box">
           <span>Favourite Coin </span>
@@ -56,9 +56,11 @@
         </div>
       </div>
     </div>
-    <div class="options">
-    </label>
-    <a href="#">Forgot password?</a>
+    <div class="forget">
+      <div class="options">
+      </label>
+      <a href="#">Forgot password?</a>
+      </div>
     </div>
   </main>
 </body>
