--- a/profile.html
+++ b/profile.html
@@ -40,7 +40,7 @@
           <a href="kyc.html">Verify Profile</a>
         </div>
         <div class="buton">
-          <a href="">Edit Profile</a>
+          <a href="update.html">Edit Profile</a>
         </div>
       </div>
     </div>
@@ -59,7 +59,7 @@
     <div class="forget">
       <div class="options">
       </label>
-      <a href="#">Forgot password?</a>
+      <a href="forgot.html">Forgot password?</a>
       </div>
     </div>
   </main>
