--- a/login.html
+++ b/login.html
@@ -32,7 +32,7 @@
           <input type="checkbox" />
           Remember me
         </label>
-        <a href="#">Forgot password?</a>
+        <a href="forgot">Forgot password?</a>
       </div>
 
       <button type="submit"><a href="./dashboard.html">Login</a></button>
