--- a/support.html
+++ b/support.html
@@ -5,8 +5,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Customer Support - Blakdhut</title>
   <link rel="stylesheet" href="./css/support.css">
+  <link rel="stylesheet" href="./css/dashboard.css" />
+  <script src="https://kit.fontawesome.com/883ba9c28f.js" crossorigin="anonymous"></script>
+  <script src="./js/mood.js"></script>
+  <script src="./js/menu.js"></script>
 </head>
 <body>
+  <header class="navbar">
+  <a href="./index.html" class="logo">
+    <img src="./logo.png" alt="Blakdhut Logo" />
+  </a>
+  <button class="menu-toggle" id="menuToggle">&#9776;</button>
+
+  <div class="overlay" id="menu">
+    <button class="close-btn" id="closeMenu">&times;</button>
+    <nav class="overlay-menu">
+      <a href="./dashboard.html">Dashboard</a>
+      <a href="./kyc.html">KYC</a>
+      <a href="./referral.html">Referral</a>
+      <a href="./history.html">History</a>
+      <a href="./support.html">Support</a>
+      <button id="theme-toggle" class="menu-toggle"><i class="fa-solid fa-moon fa-2xs"></i></button>
+    </nav>
+  </div>
+</header>
   <div class="form">
     <h2>Customer Support</h2>
     <p>Need help? Reach out to us by filling out the form below:</p>
