--- a/update.html
+++ b/update.html
@@ -6,8 +6,11 @@
   <title>Edit Profile</title>
   <link rel="stylesheet" href="./css/dashboard.css" />
   <link rel="stylesheet" href="./css/profile.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playwrite+PL:wght@100..400&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/883ba9c28f.js" crossorigin="anonymous"></script>
     <script src="./js/mood.js"></script>
-  <script src="./js/menu.js"></script>
+    <script src="./js/menu.js"></script>
 </head>
 <body>
     <header class="navbar">
