--- a/buy.html
+++ b/buy.html
@@ -66,6 +66,7 @@
         <span>Buying Rate</span>
         <span>₦1538/$</span>
       </div>
+      <button type="submit">Buy</button>
     </form>
   </div>
 
