--- a/confirm.html
+++ b/confirm.html
@@ -48,7 +48,7 @@
 
     <button onclick="goToProcessing()">I've Made Payment</button>
     <br><br>
-    <a href="buy.html" style="color: #ffee00;">← Go Back</a>
+    <a href="buy.html" style="color: #ffee00; border-radius: 10px;">← Go Back</a>
   </div>
 
 
