--- a/dashboard.html
+++ b/dashboard.html
@@ -49,6 +49,12 @@
           <span>Buy</span>
         </div>
         <div class="action-item">
+          <a href="./buy.html">
+          <button><img src="./icons/swap.png" alt="Buy" /></button>
+          </a>
+          <span>Swap</span>
+        </div>
+        <div class="action-item">
           <a href="./history.html">
           <button><img src="./icons/bill.png" alt="History" /></button>
           </a>
