--- a/confirm.html
+++ b/confirm.html
@@ -46,7 +46,7 @@
     <p><strong>Account Name:</strong> Blakdhut Global</p>
     <p><strong>Account Number:</strong> 1234567890</p>
 
-    <button onclick="goToProcessing()">I've Made Payment</button>
+    <button onclick="goToProcessing()" style="width: 100px; border-radius: 0;">I've Made Payment</button>
     <br><br>
     <a href="buy.html" style="color: #ffee00; border-radius: 10px;">← Go Back</a>
   </div>
