--- a/sell-confirm.html
+++ b/sell-confirm.html
@@ -5,8 +5,40 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sell Confirmation - Blakdhut</title>
   <link rel="stylesheet" href="./css/sales.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Playwrite+PL:wght@100..400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./css/dashboard.css" />
+    <script src="https://kit.fontawesome.com/883ba9c28f.js" crossorigin="anonymous"></script>
+    <script src="./js/mood.js"></script>
+    <script src="./js/menu.js"></script>
+    <style>
+      button{
+        width: 100px;
+        border-radius: 0;
+        height: 40px;
+      }
+    </style>
 </head>
 <body>
+  <header class="navbar">
+  <a href="./index.html" class="logo">
+    <img src="./logo.png" alt="Blakdhut Logo" />
+  </a>
+  <button class="menu-toggle" id="menuToggle">&#9776;</button>
+
+  <div class="overlay" id="menu">
+    <button class="close-btn" id="closeMenu">&times;</button>
+    <nav class="overlay-menu">
+      <a href="./profile.html">Profile</a>
+      <a href="./kyc.html">KYC</a>
+      <a href="./referral.html">Referral</a>
+      <a href="./history.html">History</a>
+      <a href="./support.html">Support</a>
+      <button id="theme-toggle" class="menu-toggle"><i class="fa-solid fa-moon fa-2xs"></i></button>
+    </nav>
+  </div>
+</header>
+
   <div class="form">
     <h2>Confirm Your Sale</h2>
 
@@ -25,7 +57,7 @@
 
     <button onclick="goToProcessing()">Confirm</button>
     <br><br>
-    <a href="sell.html" style="color: #ffee00;">← Go Back</a>
+    <a href="sell.html">← Go Back</a>
   </div>
 
   <script>
