--- a/dashboard.html
+++ b/dashboard.html
@@ -49,7 +49,7 @@
           <span>Buy</span>
         </div>
         <div class="action-item">
-          <a href="./buy.html">
+          <a href="./comingsoon.html">
           <button><img src="./icons/swap.png" alt="Buy" /></button>
           </a>
           <span>Swap</span>
